# SoftPyIdentify

./: LICENSE  README.md  pyproject.toml
src/softpyidentify/: __identify_fast.py  __identify_slow.py  __identify_static.py  __init__.py  __split_signal.py  __step_response.py
workflows/: publish-to-test-pypi.yml
