[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "softpyidentify"
version = "0.0.2"
authors = [
  { name="Jakub Bernat", email="jakub.bernat@put.poznan.pl" },
]
description = "SoftPyIdentify library with tools to identify the model of the actuators with flexible material."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "matplotlib>=3.5.0",
  "control>=0.9.4"
]

[project.urls]
Homepage = "https://github.com/jkb-ctrl/softpyidentify"
Issues = "https://github.com/jkb-ctrl/softpyidentify/issues"
